Created skeleton design for index.html.

--- a/html/index.html
+++ b/html/index.html
@@ -12,6 +12,24 @@
     </head>
 
     <body>
-        <p>Test</p>
+        <div>
+            <h1>title</h1>
+            <p>tag line</p>
+        </div>
+
+        <div>
+            <!--nav bar-->
+            
+        </div>
+
+        <div>
+            <p>info</p>
+            <p>story</p>
+        </div>
+
+        <div>
+            <p>contact us</p>
+            <p>opening times</p>
+        </div>
     </body>
 </html>
