Created skeleton design for testimonials.html.

--- a/html/testimonials.html
+++ b/html/testimonials.html
@@ -10,4 +10,24 @@
 
         <title>Community Table - Testimonials</title>
     </head>
+
+        <body>
+        <div>
+            <h1>title</h1>
+            <p>tag line</p>
+        </div>
+
+        <div>
+            <!--nav bar-->
+            
+        </div>
+
+        <div>
+            <p>testimonials</p>
+        </div>
+
+        <div>
+            <p>contact us</p>
+            <p>opening times</p>
+        </div>
 </html>
