Added business info into index.html.

--- a/html/index.html
+++ b/html/index.html
@@ -1,35 +1,83 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en-GB">
-    <head>
-        <meta charset="utf-8"/>
-        <meta name="author" content="Michael Faria">
-        <meta name="description" content="The official website for the Community Table food bank.">
-        <meta name="keywords" content="Community Table, food bank">
-        
-        <link rel="stylesheet" href="/css/index.css">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="author" content="Michael Faria" />
+    <meta
+      name="description"
+      content="The official website for the Community Table food bank."
+    />
+    <meta name="keywords" content="Community Table, food bank" />
 
-        <title>Community Table</title>
-    </head>
+    <link rel="stylesheet" href="/css/index.css" />
 
-    <body>
-        <div>
-            <h1>title</h1>
-            <p>tag line</p>
-        </div>
+    <title>Community Table</title>
+  </head>
 
-        <div>
-            <!--nav bar-->
-            
-        </div>
+  <body>
+    <div>
+      <h1>Community Table</h1>
+      <p>A Table Set for All</p>
+    </div>
 
-        <div>
-            <p>info</p>
-            <p>story</p>
-        </div>
+    <div>
+      <!--nav bar-->
+    </div>
 
-        <div>
-            <p>contact us</p>
-            <p>opening times</p>
-        </div>
-    </body>
+    <div>
+      <div>
+        <h2>Info</h2>
+        <p>
+          We welcome everyone — no referrals or proof of need required. All
+          meals are vegetarian-friendly, with vegan and gluten-free options
+          available daily. The space is fully wheelchair accessible, with
+          step-free entry and accessible bathrooms.
+        </p>
+      </div>
+
+      <div>
+        <h2>Our Story</h2>
+        <p>
+          Community Table was established in 2018 by local organiser Maya Patel
+          and chef David Green as a neighbourhood initiative to tackle food
+          insecurity and social isolation in the heart of East London. What
+          began as a small food bank and soup kitchen in a church hall has
+          evolved into a vibrant community hub where people cook, share, and
+          learn together.
+        </p>
+        <p>
+          Today, Community Kitchen runs a zero-waste café, weekly community
+          meals, and cooking workshops that celebrate seasonal, affordable, and
+          culturally diverse food. All proceeds go back into supporting local
+          families through meal donations, skills training, and volunteer
+          opportunities.
+        </p>
+        <p>
+          Recognised for its innovative approach to social sustainability,
+          Community Kitchen received the London Food Roots Award (2023) and
+          continues to partner with local growers and surplus suppliers to
+          ensure that no good food goes to waste.
+        </p>
+      </div>
+    </div>
+
+    <!--displayed side by side at the very bottom-->>
+    <div>
+      <div>
+        <p>Contact Us:</p>
+        <p>
+          Follow our journey and get involved on Instagram @communitykitchenldn.
+          For volunteer or partnership opportunities, please contact:
+        </p>
+        <p>hello@communitykitchen.org.uk</p>
+      </div>
+
+      <div>
+        <p>Opening Times:</p>
+        <p>Mon – Fri: 10 am – 8 pm</p>
+        <p>Sat: 10 am – 6 pm</p>
+        <p>Sun: Closed</p>
+      </div>
+    </div>
+  </body>
 </html>
