Added testimonials to testimonials.html. Minor fix in index.html.

--- a/html/index.html
+++ b/html/index.html
@@ -61,7 +61,7 @@
       </div>
     </div>
 
-    <!--displayed side by side at the very bottom-->>
+    <!--displayed side by side at the very bottom-->
     <div>
       <div>
         <p>Contact Us:</p>
