--- a/html/testimonials.html
+++ b/html/testimonials.html
@@ -1,33 +1,111 @@
 <!DOCTYPE html>
 <html lang="en-GB">
-    <head>
-        <meta charset="utf-8"/>
-        <meta name="author" content="Michael Faria">
-        <meta name="description" content="Testimonials for the Community Table food bank.">
-        <meta name="keywords" content="Community Table, food bank, testimonials">
-        
-        <link rel="stylesheet" href="/css/testimonials.css">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="author" content="Michael Faria" />
+    <meta
+      name="description"
+      content="Testimonials for the Community Table food bank."
+    />
+    <meta name="keywords" content="Community Table, food bank, testimonials" />
 
-        <title>Community Table - Testimonials</title>
-    </head>
+    <link rel="stylesheet" href="/css/testimonials.css" />
 
-        <body>
-        <div>
-            <h1>title</h1>
-            <p>tag line</p>
-        </div>
+    <title>Community Table - Testimonials</title>
+  </head>
 
-        <div>
-            <!--nav bar-->
-            
-        </div>
+  <body>
+    <div>
+      <h1>Community Table</h1>
+      <p>A Table Set for All</p>
+    </div>
 
-        <div>
-            <p>testimonials</p>
-        </div>
+    <div>
+      <!--nav bar-->
+    </div>
 
-        <div>
-            <p>contact us</p>
-            <p>opening times</p>
-        </div>
+    <div>
+      <div>
+        <p>
+          "Community Table isn’t just about food — it’s about dignity. When I
+          first came here, I was struggling to feed my kids. Now I volunteer
+          twice a week, and it feels like being part of a big, caring family."
+        </p>
+        <p>— Amira, Local Resident & Volunteer</p>
+      </div>
+
+      <div>
+        <p>
+          "The meals are nourishing, but the real magic is the sense of
+          belonging. Everyone is welcome, and you can feel that from the moment
+          you walk in."
+        </p>
+        <p>— John P., Regular Guest</p>
+      </div>
+
+      <div>
+        <p>
+          "Our partnership with Community Table has shown how local businesses
+          can make a real difference. Their zero-waste ethos aligns perfectly
+          with our sustainability goals."
+        </p>
+        <p>— Sophie Lang, Manager at GreenGrocer Co-op</p>
+      </div>
+
+      <div>
+        <p>
+          "I joined a community cooking session not knowing anyone. Now I’ve
+          made friends, learned new recipes, and gained the confidence to cook
+          for others."
+        </p>
+        <p>— Daniel, Workshop Participant</p>
+      </div>
+
+      <div>
+        <p>
+          "Community Table is the kind of project every neighbourhood needs —
+          practical, kind, and deeply human. It shows what’s possible when
+          people come together around food."
+        </p>
+        <p>— Councillor Rachel D’Souza, Hackney Council</p>
+      </div>
+
+      <div>
+        <p>
+          "I’ve volunteered at a few community kitchens, but this one stands
+          out. The organisation, the inclusivity, and the atmosphere are
+          incredible. It feels like a home."
+        </p>
+        <p>— Leo, Volunteer Chef</p>
+      </div>
+
+      <div>
+        <p>
+          "For me, Community Table has been a lifeline. It’s more than a meal —
+          it’s a conversation, a place to laugh, and a reminder that you’re not
+          alone."
+        </p>
+        <p>— Maria, Community Member</p>
+      </div>
+    </div>
+
+    <!--displayed side by side at the very bottom-->
+    <div>
+      <div>
+        <p>Contact Us:</p>
+        <p>
+          Follow our journey and get involved on Instagram @communitykitchenldn.
+          For volunteer or partnership opportunities, please contact:
+        </p>
+        <p>hello@communitykitchen.org.uk</p>
+      </div>
+
+      <div>
+        <p>Opening Times:</p>
+        <p>Mon – Fri: 10 am – 8 pm</p>
+        <p>Sat: 10 am – 6 pm</p>
+        <p>Sun: Closed</p>
+      </div>
+    </div>
+  </body>
 </html>
