Fixed CSS links. Centered title div.

--- a/html/index.html
+++ b/html/index.html
@@ -9,13 +9,13 @@
     />
     <meta name="keywords" content="Community Table, food bank" />
 
-    <link rel="stylesheet" href="/css/index.css" />
+    <link rel="stylesheet" href="../css/index.css">
 
     <title>Community Table</title>
   </head>
 
   <body>
-    <div>
+    <div id="title">
       <h1>Community Table</h1>
       <p>A Table Set for All</p>
     </div>
