--- a/html/testimonials.html
+++ b/html/testimonials.html
@@ -9,13 +9,13 @@
     />
     <meta name="keywords" content="Community Table, food bank, testimonials" />
 
-    <link rel="stylesheet" href="/css/testimonials.css" />
+    <link rel="stylesheet" href="../css/testimonials.css" />
 
     <title>Community Table - Testimonials</title>
   </head>
 
   <body>
-    <div>
+    <div id="title">
       <h1>Community Table</h1>
       <p>A Table Set for All</p>
     </div>
