--- a/html/testimonials.html
+++ b/html/testimonials.html
@@ -20,8 +20,11 @@
       <p>A Table Set for All</p>
     </div>
 
-    <div>
-      <!--nav bar-->
+    <!--links to bookmarks on this page and to testimonials page-->
+    <div id="navbar">
+      <h3>Our Story</h3>
+      <h3>View Our Main Page</h3>
+      <h3>Contact Us</h3>
     </div>
 
     <div>
