--- a/html/index.html
+++ b/html/index.html
@@ -22,9 +22,9 @@
 
     <!--links to bookmarks on this page and to testimonials page-->
     <div id="navbar">
-      <h3>Our Story</h3>
-      <h3>View Our Testimonials</h3>
-      <h3>Contact Us</h3>
+      <h3><a href="index.html#our_story">Our Story</a></h3>
+      <h3><a href="testimonials.html">View Our Testimonials</a></h3>
+      <h3><a href="index.html#contact_us">Contact Us</a></h3>
     </div>
 
     <div>
@@ -38,7 +38,7 @@
         </p>
       </div>
 
-      <div>
+      <div id="our_story">
         <h2>Our Story</h2>
         <p>
           Community Table was established in 2018 by local organiser Maya Patel
@@ -66,7 +66,7 @@
 
     <!--displayed side by side at the very bottom-->
     <div>
-      <div>
+      <div id="contact_us">
         <p>Contact Us:</p>
         <p>
           Follow our journey and get involved on Instagram @communitykitchenldn.
