--- a/html/testimonials.html
+++ b/html/testimonials.html
@@ -22,9 +22,9 @@
 
     <!--links to bookmarks on this page and to testimonials page-->
     <div id="navbar">
-      <h3>Our Story</h3>
-      <h3>View Our Main Page</h3>
-      <h3>Contact Us</h3>
+      <h3><a href="index.html">Return To Our Main Page</a></h3>
+      <h3><a href="index.html#our_story">Our Story</a></h3>
+      <h3><a href="testimonials.html#contact_us">Contact Us</a></h3>
     </div>
 
     <div>
@@ -94,7 +94,7 @@
 
     <!--displayed side by side at the very bottom-->
     <div>
-      <div>
+      <div id="contact_us">
         <p>Contact Us:</p>
         <p>
           Follow our journey and get involved on Instagram @communitykitchenldn.
