--- a/html/index.html
+++ b/html/index.html
@@ -64,19 +64,21 @@
       </div>
     </div>
 
-    <!--displayed side by side at the very bottom-->
-    <div>
+    <div id="bottom_section">
       <div id="contact_us">
-        <p>Contact Us:</p>
-        <p>
-          Follow our journey and get involved on Instagram @communitykitchenldn.
-          For volunteer or partnership opportunities, please contact:
-        </p>
+        <h4>Contact Us:</h4>
+        <p>For volunteer or partnership opportunities, please contact:</p>
         <p>hello@communitykitchen.org.uk</p>
       </div>
 
       <div>
-        <p>Opening Times:</p>
+        <h4>Follow Us!</h4>
+        <p>Follow our journey and get involved on Instagram:</p>
+        <p>@communitykitchenldn</p>
+      </div>
+
+      <div>
+        <h4>Opening Times:</h4>
         <p>Mon – Fri: 10 am – 8 pm</p>
         <p>Sat: 10 am – 6 pm</p>
         <p>Sun: Closed</p>
