Minor changes including code reformatting.

--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,7 @@
     />
     <meta name="keywords" content="Community Table, food bank" />
 
-    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../css/index.css" />
 
     <title>Community Table</title>
   </head>
@@ -17,10 +17,10 @@
   <body>
     <div id="title">
       <h1>Community Table</h1>
-      <p>A Table Set for All</p>
+      <!--special font for the quote below-->
+      <p>"A Table Set for All"</p>
     </div>
 
-    <!--links to bookmarks on this page and to testimonials page-->
     <div id="navbar">
       <h3><a href="index.html#our_story">Our Story</a></h3>
       <h3><a href="testimonials.html">View Our Testimonials</a></h3>
@@ -29,7 +29,7 @@
 
     <div>
       <div>
-        <h2>Info</h2>
+        <h2>Information</h2>
         <p>
           We welcome everyone — no referrals or proof of need required. All
           meals are vegetarian-friendly, with vegan and gluten-free options
