--- a/html/testimonials.html
+++ b/html/testimonials.html
@@ -17,10 +17,11 @@
   <body>
     <div id="title">
       <h1>Community Table</h1>
-      <p>A Table Set for All</p>
+      <h2 id="subtitle">Our Testimonials</h2>
+      <!--special font for the quote below-->
+      <p>"A Table Set for All"</p>
     </div>
 
-    <!--links to bookmarks on this page and to testimonials page-->
     <div id="navbar">
       <h3><a href="index.html">Return To Our Main Page</a></h3>
       <h3><a href="index.html#our_story">Our Story</a></h3>
@@ -92,7 +93,7 @@
       </div>
     </div>
 
-<div id="bottom_section">
+    <div id="bottom_section">
       <div id="contact_us">
         <h4>Contact Us:</h4>
         <p>For volunteer or partnership opportunities, please contact:</p>
