Centered headings within the body of index.html.

--- a/html/index.html
+++ b/html/index.html
@@ -14,7 +14,7 @@
     <title>Community Table</title>
   </head>
 
-  <body>
+  <body id="body">
     <div id="title">
       <h1>Community Table</h1>
       <!--special font for the quote below-->
