Added an image and implemented sample float logic to display the image appropriately.

--- a/html/index.html
+++ b/html/index.html
@@ -14,7 +14,7 @@
     <title>Community Table</title>
   </head>
 
-  <body id="body">
+  <body id="body_tag">
     <div id="title">
       <h1>Community Table</h1>
       <!--special font for the quote below-->
@@ -27,7 +27,7 @@
       <h3><a href="index.html#contact_us">Contact Us</a></h3>
     </div>
 
-    <div>
+    <div id="body_content">
       <div>
         <h2>Information</h2>
         <p>
@@ -40,6 +40,8 @@
 
       <div id="our_story">
         <h2>Our Story</h2>
+        <!--image needs to be smaller, or font needs to be bigger, or margins need to be wider to make this flow nicely-->
+        <img width="400" src="../assets/marketing/food_1.jpg" alt="Image of the interior of the food bank, with crates of donations."/>
         <p>
           Community Table was established in 2018 by local organiser Maya Patel
           and chef David Green as a neighbourhood initiative to tackle food
