Improved testimonials.html styling.

--- a/html/testimonials.html
+++ b/html/testimonials.html
@@ -17,7 +17,6 @@
   <body>
     <div id="title">
       <h1>Community Table</h1>
-      <h2 id="subtitle">Our Testimonials</h2>
       <!--special font for the quote below-->
       <p>"A Table Set for All"</p>
     </div>
@@ -28,7 +27,8 @@
       <h3><a href="testimonials.html#contact_us">Contact Us</a></h3>
     </div>
 
-    <div>
+    <div id="testimonials">
+      <h2 id="subtitle">Our Testimonials</h2>
       <div>
         <p>
           "Community Table isn’t just about food — it’s about dignity. When I
