--- a/html/index.html
+++ b/html/index.html
@@ -41,7 +41,11 @@
       <div id="our_story">
         <h2>Our Story</h2>
         <!--image needs to be smaller, or font needs to be bigger, or margins need to be wider to make this flow nicely-->
-        <img width="400" src="../assets/marketing/food_1.jpg" alt="Image of the interior of the food bank, with crates of donations."/>
+        <img
+          width="400"
+          src="../assets/marketing/food_1.jpg"
+          alt="Image of the interior of the food bank, with crates of donations."
+        />
         <p>
           Community Table was established in 2018 by local organiser Maya Patel
           and chef David Green as a neighbourhood initiative to tackle food
