Established colour scheme and font families. Large overhaul in styling of index.html.

--- a/html/index.html
+++ b/html/index.html
@@ -15,20 +15,20 @@
   </head>
 
   <body id="body_tag">
-    <div id="title">
-      <h1>Community Table</h1>
-      <!--special font for the quote below-->
-      <p>"A Table Set for All"</p>
-    </div>
-
     <div id="navbar">
       <h3><a href="index.html#our_story">Our Story</a></h3>
       <h3><a href="testimonials.html">View Our Testimonials</a></h3>
       <h3><a href="index.html#contact_us">Contact Us</a></h3>
     </div>
 
+    <div id="title">
+      <h1>Community Table</h1>
+      <p>"A Table Set for All"</p>
+    </div>
+
     <div id="body_content">
-      <div>
+      <!--small image here floated to the right maybe-->
+      <div id="information">
         <h2>Information</h2>
         <p>
           We welcome everyone — no referrals or proof of need required. All
