Removed obselete #body_tag ID.

--- a/html/index.html
+++ b/html/index.html
@@ -14,7 +14,7 @@
     <title>Community Table</title>
   </head>
 
-  <body id="body_tag">
+  <body>
     <div id="navbar">
       <h3><a href="index.html#our_story">Our Story</a></h3>
       <h3><a href="testimonials.html">View Our Testimonials</a></h3>
