Created separate "Contact Us" page as contact_us.html. Changed links from other pages to link to this new page.

--- a/html/testimonials.html
+++ b/html/testimonials.html
@@ -18,7 +18,7 @@
     <div id="navbar">
       <h3><a href="index.html#our_story">Our Story</a></h3>
       <h3><a href="index.html">Return To Our Main Page</a></h3>
-      <h3><a href="testimonials.html#contact_us">Contact Us</a></h3>
+      <h3><a href="contact_us.html">Contact Us</a></h3>
     </div>
 
     <div id="title">
