--- a/html/index.html
+++ b/html/index.html
@@ -18,7 +18,7 @@
     <div id="navbar">
       <h3><a href="index.html#our_story">Our Story</a></h3>
       <h3><a href="testimonials.html">View Our Testimonials</a></h3>
-      <h3><a href="index.html#contact_us">Contact Us</a></h3>
+      <h3><a href="contact_us.html">Contact Us</a></h3>
     </div>
 
     <div id="title">
