Created main.css to house styling that is common to all html files. Added appropriate stylesheet links to each html file.

--- a/html/index.html
+++ b/html/index.html
@@ -9,6 +9,7 @@
     />
     <meta name="keywords" content="Community Table, food bank" />
 
+    <link rel="stylesheet" href="../css/main.css" />
     <link rel="stylesheet" href="../css/index.css" />
 
     <title>Community Table</title>
