--- a/html/testimonials.html
+++ b/html/testimonials.html
@@ -9,6 +9,7 @@
     />
     <meta name="keywords" content="Community Table, food bank, testimonials" />
 
+    <link rel="stylesheet" href="../css/main.css" />
     <link rel="stylesheet" href="../css/testimonials.css" />
 
     <title>Community Table - Testimonials</title>
