Cleaning up contact_us.html

--- a/html/contact_us.html
+++ b/html/contact_us.html
@@ -7,19 +7,20 @@
       name="description"
       content="The official website for the Community Table food bank."
     />
-    <meta name="keywords" content="Community Table, food bank" />
+    <meta name="keywords" content="Community Table, food bank, contact us" />
 
     <link rel="stylesheet" href="../css/main.css" />
     <link rel="stylesheet" href="../css/contact_us.css" />
 
-    <title>Community Table</title>
+    <title>Community Table - Contact Us</title>
   </head>
 
   <body>
     <div id="navbar">
       <h3><a href="index.html#our_story">Our Story</a></h3>
-      <h3><a href="testimonials.html">View Our Testimonials</a></h3>
-      <h3><a href="index.html#contact_us">Contact Us</a></h3>
+      <h3><a href="index.html">Return To Our Main Page</a></h3>
+      <!--JS logic to make indicate that this is selected, and make it unclickable-->
+      <h3><a href="contact_us.html">Contact Us</a></h3>
     </div>
 
     <div id="title">
@@ -27,9 +28,7 @@
       <p>"A Table Set for All"</p>
     </div>
 
-    <div id="body_content">
-
-    </div>
+    <div id="body_content"></div>
 
     <div id="bottom_section">
       <div id="contact_us">
