Added a subtitle to contact_us.html and moved styling from tesimonials.css to main.css

--- a/html/contact_us.html
+++ b/html/contact_us.html
@@ -28,7 +28,9 @@
       <p>"A Table Set for All"</p>
     </div>
 
-    <div id="body_content"></div>
+    <div id="body_content">
+        <h2 id="subtitle">Send your message!</h2>
+    </div>
 
     <div id="bottom_section">
       <div id="contact_us">
