Added HTML elements for the contact us form.

--- a/html/contact_us.html
+++ b/html/contact_us.html
@@ -29,7 +29,19 @@
     </div>
 
     <div id="body_content">
-        <h2 id="subtitle">Send your message!</h2>
+      <h2 id="subtitle">Send your message!</h2>
+      <h4>Please enter your details below</h4>
+      <div id="input_form">
+        <form>
+          <label for="name">Name:</label>
+          <input type="text" id="name" name="name" />
+          <label for="email">E-mail:</label>
+          <input type="text" id="email" name="email" />
+          <label for="message">Message:</label>
+          <input type="text" id="message" name="message" />
+          <input type="submit" value="Submit" />
+        </form>
+      </div>
     </div>
 
     <div id="bottom_section">
