--- a/html/contact_us.html
+++ b/html/contact_us.html
@@ -31,17 +31,27 @@
     <div id="body_content">
       <h2 id="subtitle">Send your message!</h2>
       <h4>Please enter your details below</h4>
-      <div id="input_form">
-        <form>
-          <label for="name">Name:</label>
-          <input type="text" id="name" name="name" />
-          <label for="email">E-mail:</label>
-          <input type="text" id="email" name="email" />
-          <label for="message">Message:</label>
-          <input type="text" id="message" name="message" />
-          <input type="submit" value="Submit" />
-        </form>
-      </div>
+      <form id="input_form">
+        <div id="top_form">
+          <div>
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" />
+          </div>
+          <div>
+            <label for="email">E-mail:</label>
+            <input type="email" id="email" name="email" />
+          </div>
+        </div>
+        <div id="bottom_form">
+          <div>
+            <label for="message">Message:</label>
+            <textarea name="message" rows="8"></textarea>
+          </div>
+          <div>
+            <input type="submit" value="Submit" />
+          </div>
+        </div>
+      </form>
     </div>
 
     <div id="bottom_section">
