--- a/html/contact_us.html
+++ b/html/contact_us.html
@@ -11,6 +11,7 @@
 
     <link rel="stylesheet" href="../css/main.css" />
     <link rel="stylesheet" href="../css/contact_us.css" />
+    <script defer src="../js/contact_us.js"></script>
 
     <title>Community Table - Contact Us</title>
   </head>
@@ -30,7 +31,7 @@
 
     <div id="body_content">
       <h2 id="subtitle">Send your message!</h2>
-      <h4>Please enter your details below</h4>
+      <h4 id="instructions">Please enter your details below</h4>
       <form id="input_form">
         <div id="top_form">
           <div>
@@ -48,10 +49,28 @@
             <textarea name="message" rows="8"></textarea>
           </div>
           <div>
-            <input type="submit" value="Submit" />
+            <button onclick="sendEmail()">Submit</button>
           </div>
         </div>
       </form>
+
+      <div id="invisible_images">
+        <img
+          width="400"
+          src="../assets/marketing/food_2.jpg"
+          alt="Image of the interior of the food bank, with crates of donations."
+        />
+        <img
+          width="400"
+          src="../assets/logo/CommunityTable-logo.png"
+          alt="Image of the Community Table logo."
+        />
+        <img
+          width="400"
+          src="../assets/volunteers/people_w_1.jpeg"
+          alt="Image of the interior of the food bank, with crates of donations."
+        />
+      </div>
     </div>
 
     <div id="bottom_section">
