Created and imported main.js into all html files for the future. Changed options on the navigation bar. Implemented logic to change the color of the selected option on the navigation bar.

--- a/html/contact_us.html
+++ b/html/contact_us.html
@@ -11,6 +11,8 @@
 
     <link rel="stylesheet" href="../css/main.css" />
     <link rel="stylesheet" href="../css/contact_us.css" />
+    
+    <script defer src="../js/main.js"></script>
     <script defer src="../js/contact_us.js"></script>
 
     <title>Community Table - Contact Us</title>
@@ -18,10 +20,9 @@
 
   <body>
     <div id="navbar">
-      <h3><a href="index.html#our_story">Our Story</a></h3>
-      <h3><a href="index.html">Return To Our Main Page</a></h3>
-      <!--JS logic to make indicate that this is selected, and make it unclickable-->
-      <h3><a href="contact_us.html">Contact Us</a></h3>
+      <h3><a href="index.html"> View Our Main Page</a></h3>
+      <h3><a href="testimonials.html">View Our Testimonials</a></h3>
+      <h3><a href="contact_us.html">Send Us A Message</a></h3>
     </div>
 
     <div id="title">
