--- a/html/index.html
+++ b/html/index.html
@@ -11,15 +11,17 @@
 
     <link rel="stylesheet" href="../css/main.css" />
     <link rel="stylesheet" href="../css/index.css" />
+    
+    <script defer src="../js/main.js"></script>
 
     <title>Community Table</title>
   </head>
 
   <body>
     <div id="navbar">
-      <h3><a href="index.html#our_story">Our Story</a></h3>
+      <h3><a href="index.html" id="selected"> View Our Main Page</a></h3>
       <h3><a href="testimonials.html">View Our Testimonials</a></h3>
-      <h3><a href="contact_us.html">Contact Us</a></h3>
+      <h3><a href="contact_us.html">Send Us A Message</a></h3>
     </div>
 
     <div id="title">
