--- a/html/testimonials.html
+++ b/html/testimonials.html
@@ -12,14 +12,16 @@
     <link rel="stylesheet" href="../css/main.css" />
     <link rel="stylesheet" href="../css/testimonials.css" />
 
+    <script defer src="../js/main.js"></script>
+
     <title>Community Table - Testimonials</title>
   </head>
 
   <body>
     <div id="navbar">
-      <h3><a href="index.html#our_story">Our Story</a></h3>
-      <h3><a href="index.html">Return To Our Main Page</a></h3>
-      <h3><a href="contact_us.html">Contact Us</a></h3>
+      <h3><a href="index.html"> View Our Main Page</a></h3>
+      <h3><a href="testimonials.html" id="selected">View Our Testimonials</a></h3>
+      <h3><a href="contact_us.html">Send Us A Message</a></h3>
     </div>
 
     <div id="title">
