Added semantic tags to index.html and testimonials.html for visual styling and screen readers.

--- a/html/index.html
+++ b/html/index.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" href="../css/main.css" />
     <link rel="stylesheet" href="../css/index.css" />
-    
+
     <script defer src="../js/main.js"></script>
 
     <title>Community Table</title>
@@ -34,10 +34,11 @@
       <div id="information">
         <h2>Information</h2>
         <p>
-          We welcome everyone — no referrals or proof of need required. All
-          meals are vegetarian-friendly, with vegan and gluten-free options
-          available daily. The space is fully wheelchair accessible, with
-          step-free entry and accessible bathrooms.
+          We welcome everyone — <em>no referrals or proof of need required</em>.
+          All meals are <em>vegetarian-friendly</em>, with
+          <em>vegan and gluten-free options available</em> daily. The space is
+          <em>fully wheelchair accessible</em>, with
+          <em>step-free entry</em> and <em>accessible bathrooms</em>.
         </p>
       </div>
 
@@ -51,24 +52,25 @@
         />
         <p>
           Community Table was established in 2018 by local organiser Maya Patel
-          and chef David Green as a neighbourhood initiative to tackle food
-          insecurity and social isolation in the heart of East London. What
-          began as a small food bank and soup kitchen in a church hall has
-          evolved into a vibrant community hub where people cook, share, and
-          learn together.
+          and chef David Green as a neighbourhood initiative to tackle
+          <em>food insecurity and social isolation</em> in the heart of East
+          London. What began as a small food bank and soup kitchen in a church
+          hall has evolved into a vibrant community hub where people cook,
+          share, and learn together.
         </p>
         <p>
-          Today, Community Kitchen runs a zero-waste café, weekly community
-          meals, and cooking workshops that celebrate seasonal, affordable, and
-          culturally diverse food. All proceeds go back into supporting local
-          families through meal donations, skills training, and volunteer
-          opportunities.
+          Today, Community Kitchen runs a <em>zero-waste</em> café, weekly
+          community meals, and cooking workshops that celebrate seasonal,
+          affordable, and culturally diverse food. <em>All proceeds</em> go back
+          into supporting local families through meal donations, skills
+          training, and volunteer opportunities.
         </p>
         <p>
-          Recognised for its innovative approach to social sustainability,
-          Community Kitchen received the London Food Roots Award (2023) and
-          continues to partner with local growers and surplus suppliers to
-          ensure that no good food goes to waste.
+          Recognised for its innovative approach to
+          <em>social sustainability</em>, Community Kitchen received the
+          <strong>London Food Roots Award (2023)</strong> and continues to
+          partner with local growers and surplus suppliers to ensure that no
+          good food goes to waste.
         </p>
       </div>
     </div>
