--- a/html/testimonials.html
+++ b/html/testimonials.html
@@ -20,7 +20,9 @@
   <body>
     <div id="navbar">
       <h3><a href="index.html"> View Our Main Page</a></h3>
-      <h3><a href="testimonials.html" id="selected">View Our Testimonials</a></h3>
+      <h3>
+        <a href="testimonials.html" id="selected">View Our Testimonials</a>
+      </h3>
       <h3><a href="contact_us.html">Send Us A Message</a></h3>
     </div>
 
@@ -33,9 +35,10 @@
       <h2 id="subtitle">Our Testimonials</h2>
       <div>
         <p>
-          "Community Table isn’t just about food — it’s about dignity. When I
-          first came here, I was struggling to feed my kids. Now I volunteer
-          twice a week, and it feels like being part of a big, caring family."
+          "Community Table isn’t just about food — it’s about
+          <strong>dignity</strong>. When I first came here, I was struggling to
+          feed my kids. Now I volunteer twice a week, and it feels like being
+          part of a <em>big, caring family</em>."
         </p>
         <p>— Amira, Local Resident & Volunteer</p>
       </div>
@@ -43,8 +46,8 @@
       <div>
         <p>
           "The meals are nourishing, but the real magic is the sense of
-          belonging. Everyone is welcome, and you can feel that from the moment
-          you walk in."
+          <strong>belonging</strong>. <em>Everyone is welcome</em>, and you can
+          feel that from the moment you walk in."
         </p>
         <p>— John P., Regular Guest</p>
       </div>
@@ -52,8 +55,8 @@
       <div>
         <p>
           "Our partnership with Community Table has shown how local businesses
-          can make a real difference. Their zero-waste ethos aligns perfectly
-          with our sustainability goals."
+          can make a <em>real difference</em>. Their zero-waste ethos aligns
+          perfectly with our <strong>sustainability</strong> goals."
         </p>
         <p>— Sophie Lang, Manager at GreenGrocer Co-op</p>
       </div>
@@ -61,8 +64,8 @@
       <div>
         <p>
           "I joined a community cooking session not knowing anyone. Now I’ve
-          made friends, learned new recipes, and gained the confidence to cook
-          for others."
+          made <strong>friends</strong>, learned new recipes, and
+          <em>gained the confidence</em> to cook for others."
         </p>
         <p>— Daniel, Workshop Participant</p>
       </div>
@@ -70,26 +73,26 @@
       <div>
         <p>
           "Community Table is the kind of project every neighbourhood needs —
-          practical, kind, and deeply human. It shows what’s possible when
-          people come together around food."
+          practical, kind, and deeply <strong>human</strong>. It shows what’s
+          possible when people <em>come together</em> around food."
         </p>
         <p>— Councillor Rachel D’Souza, Hackney Council</p>
       </div>
 
       <div>
         <p>
-          "I’ve volunteered at a few community kitchens, but this one stands
-          out. The organisation, the inclusivity, and the atmosphere are
-          incredible. It feels like a home."
+          "I’ve volunteered at a few community kitchens, but
+          <em>this one stands out</em>. The organisation, the inclusivity, and
+          the atmosphere are incredible. It feels like a <strong>home</strong>."
         </p>
         <p>— Leo, Volunteer Chef</p>
       </div>
 
       <div>
         <p>
-          "For me, Community Table has been a lifeline. It’s more than a meal —
-          it’s a conversation, a place to laugh, and a reminder that you’re not
-          alone."
+          "For me, Community Table has been a <strong>lifeline</strong>. It’s
+          more than a meal — it’s a conversation, a place to laugh, and
+          <em>a reminder that you’re not alone.</em>"
         </p>
         <p>— Maria, Community Member</p>
       </div>
