On DOM load, the current time is checked and matched against the list of opening times. If the food bank is currently opened, the corresponding time will appear normally, while other times will appear striked through.

--- a/html/contact_us.html
+++ b/html/contact_us.html
@@ -89,9 +89,9 @@
 
       <div>
         <h4>Opening Times:</h4>
-        <p>Mon – Fri: 10 am – 8 pm</p>
-        <p>Sat: 10 am – 6 pm</p>
-        <p>Sun: Closed</p>
+        <p class="striked_through" id="weekdays">Mon – Fri: 10 am – 8 pm</p>
+        <p class="striked_through" id="saturday">Sat: 10 am – 6 pm</p>
+        <p class="striked_through" id="sunday">Sun: Closed</p>
       </div>
     </div>
   </body>
