--- a/html/contact_us.html
+++ b/html/contact_us.html
@@ -84,7 +84,7 @@
       <div>
         <h4>Follow Us!</h4>
         <p>Follow our journey and get involved on Instagram:</p>
-        <p>@communitykitchenldn</p>
+        <p><a href="">@communitykitchenldn</a></p>
       </div>
 
       <div>
