Implemented message in opening times section, based on the current time.

--- a/html/index.html
+++ b/html/index.html
@@ -93,6 +93,7 @@
         <p class="striked_through" id="weekdays">Mon – Fri: 10 am – 8 pm</p>
         <p class="striked_through" id="saturday">Sat: 10 am – 6 pm</p>
         <p class="striked_through" id="sunday">Sun: Closed</p>
+        <p id="opening_message">We are open!</p>
       </div>
     </div>
   </body>
