Added opening time message to other pages.

--- a/html/contact_us.html
+++ b/html/contact_us.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" href="../css/main.css" />
     <link rel="stylesheet" href="../css/contact_us.css" />
-    
+
     <script defer src="../js/main.js"></script>
     <script defer src="../js/contact_us.js"></script>
 
@@ -92,6 +92,7 @@
         <p class="striked_through" id="weekdays">Mon – Fri: 10 am – 8 pm</p>
         <p class="striked_through" id="saturday">Sat: 10 am – 6 pm</p>
         <p class="striked_through" id="sunday">Sun: Closed</p>
+        <p id="opening_message">We are open!</p>
       </div>
     </div>
   </body>
