--- a/html/contact_us.html
+++ b/html/contact_us.html
@@ -22,7 +22,7 @@
     <div id="navbar">
       <h3><a href="index.html"> View Our Main Page</a></h3>
       <h3><a href="testimonials.html">View Our Testimonials</a></h3>
-      <h3><a href="contact_us.html">Send Us A Message</a></h3>
+      <h3><a href="contact_us.html" id="selected">Send Us A Message</a></h3>
     </div>
 
     <div id="title">
