--- a/html/index.html
+++ b/html/index.html
@@ -73,6 +73,29 @@
           good food goes to waste.
         </p>
       </div>
+
+      <div id="help">
+        <h2>Need help or want to help?</h2>
+        <p>
+          If you want to meet and speak to us <emp>in person</emp>. Feel free to
+          drop by our food bank in <strong>Islington, London</strong> when we
+          are open. Opening times are shown at the <emp>bottom-right</emp> of
+          this website.
+        </p>
+        <p>
+          Alternatively, if you would like to send any <emp>inquiries</emp> or
+          want to leave us a <emp>message</emp>, you can do so at the e-mail:
+          <strong>hello@communitykitchen.org.uk</strong> which is also provided
+          at the <emp>bottom-left</emp> of this website, or you can do so at the
+          page <a href="contact_us.html">here!</a>
+        </p>
+        <p>
+          If you would like to hear of the <emp>community's experiences</emp> of
+          our food bank. You can view our <strong>testimonials</strong>
+          <a href="testimonials.html">here!</a>
+        </p>
+        <h4>We hope to hear from you!</h4>
+      </div>
     </div>
 
     <div id="bottom_section">
