Improved semantic tags in index.html

--- a/html/index.html
+++ b/html/index.html
@@ -51,16 +51,18 @@
           alt="Image of the interior of the food bank, with crates of donations."
         />
         <p>
-          Community Table was established in 2018 by local organiser Maya Patel
-          and chef David Green as a neighbourhood initiative to tackle
-          <em>food insecurity and social isolation</em> in the heart of East
-          London. What began as a small food bank and soup kitchen in a church
-          hall has evolved into a vibrant community hub where people cook,
-          share, and learn together.
+          Community Table was established in 2018 by local organiser
+          <strong>Maya Patel</strong> and chef <strong>David Green</strong> as a
+          neighbourhood initiative to tackle
+          <em>food insecurity and social isolation</em> in the heart of
+          <strong>East London</strong>. What began as a small food bank and soup
+          kitchen in a church hall has evolved into a vibrant community hub
+          where people cook, share, and learn together.
         </p>
         <p>
-          Today, Community Kitchen runs a <em>zero-waste</em> café, weekly
-          community meals, and cooking workshops that celebrate seasonal,
+          Today, Community Kitchen runs a <strong>zero-waste café</strong>,
+          weekly <strong>community meals</strong>, and
+          <strong>cooking workshops</strong> that celebrate seasonal,
           affordable, and culturally diverse food. <em>All proceeds</em> go back
           into supporting local families through meal donations, skills
           training, and volunteer opportunities.
