--- a/html/index.html
+++ b/html/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="../css/index.css" />
 
     <script defer src="../js/main.js"></script>
+    <script defer src="../js/index.js"></script>
 
     <title>Community Table</title>
   </head>
@@ -81,7 +82,7 @@
         <p>
           If you want to meet and speak to us <emp>in person</emp>. Feel free to
           drop by our food bank in <strong>Islington, London</strong> when we
-          are open. Opening times are shown at the <emp>bottom-right</emp> of
+          are open. <a href="index.html#opening_times" onclick="navigateToOpeningTimes()">Opening times</a> are shown at the <emp>bottom-right</emp> of
           this website.
         </p>
         <p>
@@ -113,7 +114,7 @@
         <p><a href="">@communitykitchenldn</a></p>
       </div>
 
-      <div>
+      <div id="opening_times_normal">
         <h4>Opening Times:</h4>
         <p class="striked_through" id="weekdays">Mon – Fri: 10 am – 8 pm</p>
         <p class="striked_through" id="saturday">Sat: 10 am – 6 pm</p>
