Reversed opening times strike through logic, in case browser does not have JavaScript support.

--- a/html/testimonials.html
+++ b/html/testimonials.html
@@ -113,10 +113,10 @@
 
       <div>
         <h4>Opening Times:</h4>
-        <p class="striked_through" id="weekdays">Mon – Fri: 10 am – 8 pm</p>
-        <p class="striked_through" id="saturday">Sat: 10 am – 6 pm</p>
-        <p class="striked_through" id="sunday">Sun: Closed</p>
-        <p id="opening_message">We are open!</p>
+        <p class="not_striked_through" id="weekdays">Mon – Fri: 10 am – 8 pm</p>
+        <p class="not_striked_through" id="saturday">Sat: 10 am – 6 pm</p>
+        <p class="not_striked_through" id="sunday">Sun: Closed</p>
+        <p id="opening_message"></p>
       </div>
     </div>
   </body>
