Shortened navigation bar link names, for better viewing on smaller devices, and added links to gallery.html on each page.

--- a/html/index.html
+++ b/html/index.html
@@ -20,9 +20,12 @@
 
   <body>
     <div id="navbar">
-      <h3><a href="index.html" id="selected"> View Our Main Page</a></h3>
-      <h3><a href="testimonials.html">View Our Testimonials</a></h3>
-      <h3><a href="contact_us.html">Send Us A Message</a></h3>
+      <h3><a href="index.html" id="selected">Main Page</a></h3>
+      <h3>
+        <a href="testimonials.html">Testimonials</a>
+      </h3>
+      <h3><a href="contact_us.html">Contact Us</a></h3>
+      <h3><a href="gallery.html">Gallery</a></h3>
     </div>
 
     <div id="title">
@@ -82,8 +85,11 @@
         <p>
           If you want to meet and speak to us <emp>in person</emp>. Feel free to
           drop by our food bank in <strong>Islington, London</strong> when we
-          are open. <a href="index.html#opening_times" onclick="navigateToOpeningTimes()">Opening times</a> are shown at the <emp>bottom-right</emp> of
-          this website.
+          are open.
+          <a href="index.html#opening_times" onclick="navigateToOpeningTimes()"
+            >Opening times</a
+          >
+          are shown at the <emp>bottom-right</emp> of this website.
         </p>
         <p>
           Alternatively, if you would like to send any <emp>inquiries</emp> or
