--- a/html/testimonials.html
+++ b/html/testimonials.html
@@ -19,11 +19,12 @@
 
   <body>
     <div id="navbar">
-      <h3><a href="index.html"> View Our Main Page</a></h3>
+      <h3><a href="index.html">Main Page</a></h3>
       <h3>
-        <a href="testimonials.html" id="selected">View Our Testimonials</a>
+        <a href="testimonials.html" id="selected">Testimonials</a>
       </h3>
-      <h3><a href="contact_us.html">Send Us A Message</a></h3>
+      <h3><a href="contact_us.html">Contact Us</a></h3>
+      <h3><a href="gallery.html">Gallery</a></h3>
     </div>
 
     <div id="title">
