Added logo to index.html

--- a/html/index.html
+++ b/html/index.html
@@ -34,7 +34,6 @@
     </div>
 
     <div id="body_content">
-      <!--small image here floated to the right maybe-->
       <div id="information">
         <h2>Information</h2>
         <p>
@@ -48,7 +47,6 @@
 
       <div id="our_story">
         <h2>Our Story</h2>
-        <!--image needs to be smaller, or font needs to be bigger, or margins need to be wider to make this flow nicely-->
         <img
           width="400"
           src="../assets/marketing/food_1.jpg"
@@ -82,6 +80,11 @@
 
       <div id="help">
         <h2>Need help or want to help?</h2>
+        <img
+          width="200"
+          src="../assets/logo/CommunityTable_logoTransparentYellow.png"
+          alt="Image of the interior of the food bank, with crates of donations."
+        />
         <p>
           If you want to meet and speak to us <emp>in person</emp>. Feel free to
           drop by our food bank in <strong>Islington, London</strong> when we
