Added CSS styling for mobile devices.

--- a/html/index.html
+++ b/html/index.html
@@ -9,6 +9,8 @@
     />
     <meta name="keywords" content="Community Table, food bank" />
 
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
     <link rel="stylesheet" href="../css/main.css" />
     <link rel="stylesheet" href="../css/index.css" />
 
@@ -48,7 +50,7 @@
       <div id="our_story">
         <h2>Our Story</h2>
         <img
-          width="400"
+          width="300"
           src="../assets/marketing/food_1.jpg"
           alt="Image of the interior of the food bank, with crates of donations."
         />
