--- a/html/testimonials.html
+++ b/html/testimonials.html
@@ -9,6 +9,8 @@
     />
     <meta name="keywords" content="Community Table, food bank, testimonials" />
 
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
     <link rel="stylesheet" href="../css/main.css" />
     <link rel="stylesheet" href="../css/testimonials.css" />
 
