--- a/html/contact_us.html
+++ b/html/contact_us.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="../css/main.css" />
     <link rel="stylesheet" href="../css/contact_us.css" />
 
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
     <script defer src="../js/main.js"></script>
     <script defer src="../js/contact_us.js"></script>
 
