--- a/html/gallery.html
+++ b/html/gallery.html
@@ -12,6 +12,8 @@
       content="Community Table, food bank, gallery, photos, pictures"
     />
 
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
     <link rel="stylesheet" href="../css/main.css" />
     <link rel="stylesheet" href="../css/gallery.css" />
 
