Small correction in the alt text of an image in index.html. Minor code reformatting in contact_us.css.

--- a/html/index.html
+++ b/html/index.html
@@ -85,7 +85,7 @@
         <img
           width="200"
           src="../assets/logo/CommunityTable_logoTransparentYellow.png"
-          alt="Image of the interior of the food bank, with crates of donations."
+          alt="Image of the Community Table logo."
         />
         <p>
           If you want to meet and speak to us <emp>in person</emp>. Feel free to
