Refactored index.html to match coursework submission requirements.

--- a/html/gallery.html
+++ b/html/gallery.html
@@ -24,7 +24,7 @@
 
   <body>
     <div id="navbar">
-      <h3><a href="index.html">Main Page</a></h3>
+      <h3><a href="../index.html">Main Page</a></h3>
       <h3>
         <a href="testimonials.html">Testimonials</a>
       </h3>
