--- a/html/contact_us.html
+++ b/html/contact_us.html
@@ -22,7 +22,7 @@
 
   <body>
     <div id="navbar">
-      <h3><a href="index.html">Main Page</a></h3>
+      <h3><a href="../index.html">Main Page</a></h3>
       <h3>
         <a href="testimonials.html">Testimonials</a>
       </h3>
