--- a/html/testimonials.html
+++ b/html/testimonials.html
@@ -21,7 +21,7 @@
 
   <body>
     <div id="navbar">
-      <h3><a href="index.html">Main Page</a></h3>
+      <h3><a href="../index.html">Main Page</a></h3>
       <h3>
         <a href="testimonials.html" id="selected">Testimonials</a>
       </h3>
