--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <link rel="stylesheet" href="../css/main.css" />
-    <link rel="stylesheet" href="../css/index.css" />
+    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/index.css" />
 
-    <script defer src="../js/main.js"></script>
-    <script defer src="../js/index.js"></script>
+    <script defer src="js/main.js"></script>
+    <script defer src="js/index.js"></script>
 
     <title>Community Table</title>
   </head>
@@ -24,10 +24,10 @@
     <div id="navbar">
       <h3><a href="index.html" id="selected">Main Page</a></h3>
       <h3>
-        <a href="testimonials.html">Testimonials</a>
+        <a href="html/testimonials.html">Testimonials</a>
       </h3>
-      <h3><a href="contact_us.html">Contact Us</a></h3>
-      <h3><a href="gallery.html">Gallery</a></h3>
+      <h3><a href="html/contact_us.html">Contact Us</a></h3>
+      <h3><a href="html/gallery.html">Gallery</a></h3>
     </div>
 
     <div id="title">
@@ -51,7 +51,7 @@
         <h2>Our Story</h2>
         <img
           width="300"
-          src="../assets/marketing/food_1.jpg"
+          src="assets/marketing/food_1.jpg"
           alt="Image of the interior of the food bank, with crates of donations."
         />
         <p>
@@ -84,7 +84,7 @@
         <h2>Need help or want to help?</h2>
         <img
           width="200"
-          src="../assets/logo/CommunityTable_logoTransparentYellow.png"
+          src="assets/logo/CommunityTable_logoTransparentYellow.png"
           alt="Image of the Community Table logo."
         />
         <p>
@@ -101,12 +101,12 @@
           want to leave us a <emp>message</emp>, you can do so at the e-mail:
           <strong>hello@communitykitchen.org.uk</strong> which is also provided
           at the <emp>bottom-left</emp> of this website, or you can do so at the
-          page <a href="contact_us.html">here!</a>
+          page <a href="html/contact_us.html">here!</a>
         </p>
         <p>
           If you would like to hear of the <emp>community's experiences</emp> of
           our food bank. You can view our <strong>testimonials</strong>
-          <a href="testimonials.html">here!</a>
+          <a href="html/testimonials.html">here!</a>
         </p>
         <h4>We hope to hear from you!</h4>
       </div>
